--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
         "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js",
         "start": "node dist/index.js"
     },
-    "author": "",
+    "author": "Rasmus Sommerlund Lind",
     "license": "MIT",
     "dependencies": {
-        "@palantir/compute-module": "0.2",
+        "@palantir/compute-module": "latest",
         "@sinclair/typebox": "^0.34.30",
         "esbuild": "^0.23.0"
     },
