--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "src/index.ts",
     "scripts": {
         "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "author": "Rasmus Sommerlund Lind",
     "license": "MIT",
@@ -15,6 +17,9 @@
         "esbuild": "^0.23.0"
     },
     "devDependencies": {
-        "@types/node": "^22.5.4"
+        "@types/jest": "^29.5.12",
+        "@types/node": "^22.5.4",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.2"
     }
 }
